--- a/anime-site/bin/anime-site.dll.config
+++ b/anime-site/bin/anime-site.dll.config
@@ -15,6 +15,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <authentication mode="Forms" />
+    <sessionState mode="InProc" timeout="60"></sessionState>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
