--- a/anime-site/anime-site.csproj
+++ b/anime-site/anime-site.csproj
@@ -185,6 +185,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\movement.js" />
+    <Content Include="Scripts\questions.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
