Cookie updates with new "IsNew" value + Created dashboard page.

--- a/anime-site/anime-site.csproj
+++ b/anime-site/anime-site.csproj
@@ -202,7 +202,8 @@
     <Content Include="Views\UserAccount\Login.cshtml" />
     <Content Include="Views\UserAccount\Register.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\UserAccount\Dashboard.cshtml" />
+    <Content Include="Views\UserAccount\Welcome.cshtml" />
+    <Content Include="Views\Home\Dashboard.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
